src/board-controller/main.h

void set_led(int active);

int write_on_lcd(char* content, int len);

int read_led();

int _init_virtual_base();

void _close_virtual_base();